--- a/project.tex
+++ b/project.tex
@@ -960,7 +960,7 @@ with the sprint types and other artifacts and ceremonies of our approach.
 
 One highlight is that we approach CRISP-DM's ``data preparation'' and ZM's
 ``collect/manage data'' tasks more carefully.  Data handling operations that are not
-parametrized by the data itself are performed in the data sprint.  On the other hand,
+parametrized by the data values themselves are performed in the data sprint.  On the other hand,
 operations that use statistics/information of a sampling of the data are performed
 together with modeling --- consult \cref{chap:handling}.
 
