--- a/handling.tex
+++ b/handling.tex
@@ -7,6 +7,7 @@
   \par\raggedleft--- \textup{Unnamed Old Man}, The Legend of Zelda}
 
 % Important: avoid the term "data manipulation" as it has a negative connotation
+% TODO: review this introduction after finishing the remaining of the chapter
 
 In the previous chapter, I discussed the relationship between data format and data
 semantics.  We also saw in \cref{chap:project} that data tasks --- specifically
@@ -177,18 +178,17 @@ property is important to avoid \gls{leakage} or to bias the results of the analy
 
 \subsection{Illustrative example}
 
-Consider the example of student grades.
-
 \begin{tablebox}[label=tab:grades1]{Data table of student grades.}
   \centering
   \rowcolors{2}{black!10!white}{}
   \begin{tabular}{cccc}
     \toprule
-    \texttt{student} & \texttt{subject} & \texttt{year} & \texttt{grade} \\
+    \textbf{student} & \textbf{subject} & \textbf{year} & \textbf{grade} \\
     \midrule
     Alice & Chemistry & 2020 & 6 \\
     Alice & Math & 2019 & 8 \\
     Alice & Physics & 2019 & 7 \\
+    Bob & Chemistry & 2018 & ? \\
     Bob & Chemistry & 2019 & 7 \\
     Bob & Math & 2019 & 9 \\
     Bob & Physics & 2019 & 4 \\
@@ -199,43 +199,116 @@ Consider the example of student grades.
     \bottomrule
   \end{tabular}
   \tcblower
-  Data collected about student grades.
+  Data collected about student grades.  All information that is available is presented.
 \end{tablebox}
+
+Consider the example of data collected about student grades.  \Cref{tab:grades1}
+exemplifies all information we can possibly have about the grades of students.  A missing
+value in a cell of that table indicates that, for some reason, the information is not
+retrievable.
+
+The domain of the variables are:
+\begin{itemize}
+  \itemsep0em
+  \item $\domainof{\text{student}} = \left\{\text{Alice}, \text{Bob}, \text{Carol}\right\}$;
+  \item $\domainof{\text{subject}} = \left\{\text{Biology}, \text{Chemistry}, \text{Math},
+    \text{Physics}\right\}$;
+  \item $\domainof{\text{year}} = \mathbb{Z}$; and
+  \item $\domainof{\text{grade}} = \left[0, 10\right] \cup \left\{\missing\right\}$.
+\end{itemize}
+
+Of course, in practice, we have no guarantee that the data we have is complete nor the
+clear specification of the domain of the variables.  Instead, we must choose good
+premises about the data we are working with.
+
+Knowing that the data is complete, we can safely assume that:
+\begin{enumerate}
+  \itemsep0em
+  \item Alice has never taken Biology;
+  \item Bob passed Physics, although at the second attempt;
+  \item Carol has only taken classes in 2020.
+\end{enumerate}
 
 \begin{tablebox}[label=tab:grades2]{Data table of student grades assuming student and subject as indices.}
   \centering
   \rowcolors{2}{black!10!white}{}
-  \begin{tabular}{cccc}
+  \begin{tabular}{ccccc}
     \toprule
-    \texttt{student} & \texttt{subject} & \texttt{year} & \texttt{grade} \\
+    \textbf{s} & \textbf{student} & \textbf{subject} & \textbf{year} & \textbf{grade} \\
     \midrule
-    Alice & Biology & () & () \\
-    Alice & Chemistry & (2020) & (6) \\
-    Alice & Math & (2019) & (8) \\
-    Alice & Physics & (2019) & (7) \\
-    Bob & Biology & () & () \\
-    Bob & Chemistry & (2019) & (7) \\
-    Bob & Math & (2019) & (9) \\
-    Bob & Physics & (2019, 2020) & (4, 8) \\
-    Carol & Biology & (2020) & (8) \\
-    Carol & Chemistry & (2020) & (3) \\
-    Carol & Math & (2020) & (10) \\
-    Carol & Physics & () & () \\
+    0 & Alice & Chemistry & (2020) & (6) \\
+    1 & Alice & Math & (2019) & (8) \\
+    1 & Alice & Physics & (2019) & (7) \\
+    0 & Bob & Chemistry & (2018, 2019) & (?, 7) \\
+    0 & Bob & Math & (2019) & (9) \\
+    1 & Bob & Physics & (2019, 2020) & (4, 8) \\
+    0 & Carol & Biology & (2020) & (8) \\
+    0 & Carol & Chemistry & (2020) & (3) \\
+    1 & Carol & Math & (2020) & (10) \\
     \bottomrule
   \end{tabular}
   \tcblower
-  Indexed table with data from \cref{tab:grades1} assuming \texttt{student} and
-  \texttt{subject} as indices.
+  Indexed table with data from \cref{tab:grades1} assuming student and
+  subject as indices.  The column $s$ is the split indicator.
 \end{tablebox}
 
-We cannot assume that Alice has not taken Biology, since this can be a missing value.
+Now consider an arbitrary collection mechanism that consider student and subject as the
+indices of the table.  \Cref{tab:grades2} shows the table we have in hand.  The column $s$
+is the split indicator.  Only rows with $s = 1$ are available to us.
 
-Talk about Bob and Physics.
+Now, about the statements we made before:
+\begin{enumerate}
+  \itemsep0em
+  \item There is no way we can know if Alice has taken Biology or not.  It could be that
+    the data collection mechanism failed to collect this information or that the
+    information simply does not exist.
+  \item We can safely assume that Bob has passed Physics in the second try, once all
+    information about (Bob, Physics) is assumed to be available.
+  \item There is no guarantee that Carol has only taken classes in 2020.  It could be that
+    some row (Carol, subject) with year different than 2020 is missing in the table.
+\end{enumerate}
 
-We safely assume that Carol has failed Chemistry and gave up.  Changing year as part of
-our index would lead to a different conclusion.
+\begin{tablebox}[label=tab:grades3]{Data table of student grades assuming student as the index.}
+  \centering
+  \rowcolors{2}{black!10!white}{}
+  \begin{tabular}{ccp{2.6cm}p{1.8cm}>{\raggedright\arraybackslash}p{1.2cm}}
+    \toprule
+    \textbf{s} & \textbf{student} & \textbf{subject} & \textbf{year} & \textbf{grade} \\
+    \midrule
+    1 & Alice & (Chemistry, Math, Physics) & (2020, 2019, 2019) & (6, 8, 7) \\
+    0 & Bob & (Chemistry, Chemistry, Math, Physics, Physics) & (2018, 2019, 2019, 2019, 2020) & (?, 7, 9, 4, 8) \\
+    1 & Carol & (Biology, Chemistry, Math) & (2020, 2020, 2020) & (8, 3, 10) \\
+    \bottomrule
+  \end{tabular}
+  \tcblower
+  Indexed table with data from \cref{tab:grades1} assuming only student
+  as the index.  The column $s$ is the split indicator.
+\end{tablebox}
 
-\section{Data handling operators}
+We can be even more restrictive and consider only the student as the index of the table.
+Imposing this restriction would difficult the data collection process, but it would
+guarantee that we have all information about each student.  \Cref{tab:grades3} shows the
+table we have in hand.  As before, the column $s$ is the split indicator and nly rows with
+$s = 1$ are available to us.
+
+Our conclusions may change again:
+\begin{enumerate}
+  \itemsep0em
+  \item We can safely assume that Alice has never taken Biology, as $\text{Chemistry}
+    \not\in c(\text{Alice}, \text{subject})$.
+  \item We can assume nothing about Bob's grades, as all information about him is missing.
+  \item We can safely assume that Carol has only taken classes in 2020, as $c(\text{Carol},
+    \text{year})$ contains only values with 2020.
+\end{enumerate}
+
+It is straightforward to see that the less index columns we have, the more information we
+have about the present entities.  Also, we can see how important it is the assumptions on
+the index columns to the conclusions we can draw from the data.  Consequently,
+split-invariant operations can preserve valid conclusions about the data even when
+information is missing\footnote{Absence can be due to incomplete data collection or
+artificial splitting for validation, consult \cref{chap:planning}.}.
+
+\section{Split-invariant operators}
 
 In the literature and in software documentation, you will find a variety of terms used to
 describe data handling operations\footnote{%
