--- a/about.tex
+++ b/about.tex
@@ -87,7 +87,7 @@ field.  I am just trying to be honest and transparent.
 
 \emph{I'd rather be bold and straightforward than cower about my beliefs.}
 
-\section{Contributors}
+\section*{Contributors}
 
 \begin{itemize}
     \itemsep0em
