--- a/structured.tex
+++ b/structured.tex
@@ -336,7 +336,7 @@ be reconstructed by $\bowtie \left\{ R_1, R_2, R_3 \right\}$.  However, unlike t
 previous example, the join of the decomposed relations always contains valid tuples
 --- excluding degenerate joins, where there are no common attributes.
 The reason is that all join dependencies implied by the key dependencies are trivial when
-reduced\footnote{\color{red}A formal proof in under investigation based on \fullcite{Vincent1997}.}.
+reduced\footnote{I am investigating a formal proof based on \fullcite{Vincent1997}.}.
 
 \section{Tidy data}
 
