--- a/main.tex
+++ b/main.tex
@@ -145,6 +145,16 @@
   ItalicFont={*-Italic},
   BoldItalicFont={*-BoldItalic}]
 
+\setmonofont{CourierPrime}[
+  Extension={.ttf},
+  Path={./fonts/},
+  UprightFont={*-Regular},
+  BoldFont={*-Bold},
+  ItalicFont={*-Italic},
+  BoldItalicFont={*-BoldItalic}]
+
+\newcommand{\code}[1]{\colorbox{black!10!white}{\texttt{#1}}}
+
 %\setsansfont{SourceSansPro}
 
 \urlstyle{rm}
