Typesetting table headers.
- Adding missing fonts.

--- a/handling.tex
+++ b/handling.tex
@@ -678,7 +678,7 @@ rows beforehand.
     \rowcolors{2}{black!10!white}{}
     \begin{tabular}{ccc}
       \toprule
-      \code{name} & \code{year} & \code{value} \\
+      \textbf{name} & \textbf{year} & \textbf{value} \\
       \midrule
       A & 2019 & 1 \\
       A & 2020 & 2 \\
