--- a/inductive.tex
+++ b/inductive.tex
@@ -268,7 +268,7 @@ summarize them in \cref{tab:learning-questions}.
 \begin{tablebox}[label=tab:learning-questions]{The four main questions of learning theory.}
   \begin{tabularx}{\textwidth}{@{}lX@{}}
     \toprule
-    Part & Question \\
+     & \textbf{Question} \\
     \midrule
     \textbf{Consistency} &
       What are the necessary and sufficient conditions for consistency of a learning process? \\
@@ -452,7 +452,7 @@ $k$-nearest neighbors.
 \begin{tablebox}[label=tab:paradigm]{Learning machines paradigms and characteristics.}
   \begin{tabularx}{\textwidth}{lX@{}X@{}}
     \toprule
-    Method & Paradigm & Characteristics \\
+    \textbf{Method} & \textbf{Paradigm} & \textbf{Characteristics} \\
     \midrule
     Perceptron & Functional (parametric) & The perceptron is a linear classifier that generates a hyperplane that separates the classes. \\
     MLP & Functional (parametric) & The multi-layer perceptron is a non-linear classifier that generates a set of hyperplanes that separates the classes. \\
