--- a/project.tex
+++ b/project.tex
@@ -726,6 +726,7 @@ example, if the user interface must be updated in real-time, WebSocket is more s
 If the user interface is used to submit batch requests, REST API is more suitable.
 
 \subsection{Proposed workflow}
+\label{sub:workflow}
 
 The proposed workflow is based on the principles described above.  Our approach adapts
 the Scrum framework by defining three kinds of sprints: data sprints, solution sprints, and
