--- a/structured.tex
+++ b/structured.tex
@@ -775,7 +775,7 @@ shown in \cref{tab:tidy5}.
 \end{tablebox}
 
 \clearpage
-\section{Bridging normalization, tidyness, and data theory}
+\section{Bridging normalization, tidiness, and data theory}
 \label{sub:bridge}
 
 First and foremost, both concepts, normalization and tidy data, are not in conflict.
@@ -824,6 +824,7 @@ appropriate to generalize.
 contexts.
 
 \subsection{Tidy or not tidy?}
+\label{sub:tidy-not-tidy}
 
 Consider the following example.  We want to study the \emph{phenomenon} temperature in a
 certain city.  We fix three sensors in different locations to measure the temperature.  We
@@ -928,9 +929,10 @@ circumference and height.  In the second version, the choice becomes inconvenien
 table seems ``overtidy''.  If the first fits enough for the analysis, it should be
 preferred.
 
-In summary, tidyness is a matter of perspective.
+In summary, tidiness is a matter of perspective.
 
 \subsection{Change of observational unit}
+\label{sub:change-unit}
 
 Another very interesting conjecture is whether we can formalize the eventual \emph{change
 of observational unit} in terms of the order that joins and grouping operations are
